jipsy-tests/src/test/resources/invalid/InterfaceTestClass.java
import java.util.RandomAccess;

import org.kordamp.jipsy.ServiceProviderFor;

@ServiceProviderFor(RandomAccess.class)
public interface InterfaceTestClass extends RandomAccess {
	
}
